# rust_tutorial_for_beginners_well_commented

./: Cargo.toml
src/: :terminal  boxes.rs  casting.rs  casting_mangakissa_services.rs  display_example.rs  enum_types.rs  error_handling.rs  ev_num.rs  fibo.rs  generic_anime.rs  generic_manga_kissa.rs  heap_the_stack.rs  junko_lifetimes.rs  loops.rs  main.rs  options.rs  strings.rs  struct_and_methods.rs  thread_channel.rs  thread_channel.rs.save  threading_channel.rs  trait_shibuya_109.rs
src/files/: devsecret.txt  err_handling_dev_mistake_unwrap.txt  secondsecret.txt
src/hidden_vars/: README.md  mod.rs  read_hidden_vars.rs
src/mistralai/: README.md  mistral.rs
src/use_rust_in_python/: README.md  app.py
src/use_rust_in_python/my_rust_extension/: Cargo.toml  pyproject.toml
src/use_rust_in_python/my_rust_extension/src/: lib.rs
